# obsidian-markdown-parser

./: .gitignore  main.py  pyproject.toml  setup.cfg
